--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Lace Hotpants — Mocha Modest</title>
   <meta name="description" content="lace hotpants — Hotpants boxer super jumbo. Lembut, adem, nyaman untuk sehari-hari." />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -21,48 +21,29 @@
     .wrap{max-width:440px;margin:0 auto;padding:16px}
     .card{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);margin-bottom:18px;overflow:hidden}
     .section{padding:16px}
-
-    /* hero */
-    .hero img{width:100%;display:block;height:auto;object-fit:contain}
-
+    .hero img{width:100%;display:block;height:auto}
     h1{font-size:22px;color:var(--mocha);margin-bottom:8px}
     .lead{color:var(--muted);font-size:14px;margin-bottom:10px}
     .desc{font-size:14px;margin-bottom:12px}
-
     .sizes{display:grid;grid-template-columns:1fr 1fr;gap:8px}
-    .size{background:linear-gradient(180deg,var(--accent),#fff);padding:10px;border-radius:10px;text-align:left;border:1px solid rgba(160,130,100,0.06)}
+    .size{background:linear-gradient(180deg,var(--accent),#fff);padding:10px;border-radius:10px;border:1px solid rgba(160,130,100,0.06)}
     .size b{color:var(--mocha);display:block;margin-bottom:4px}
-
     .details h3{color:var(--mocha);margin-bottom:8px}
     .details ul{margin-left:16px}
     .details li{margin-bottom:6px}
-
     .gallery{display:grid;grid-template-columns:1fr 1fr;gap:10px;margin-top:10px}
     .gallery img{width:100%;border-radius:10px}
     .caption{text-align:center;font-size:13px;color:var(--muted);margin-top:4px}
-
-    .testi h3{text-align:center;color:var(--mocha);margin-bottom:10px}
     .bubble{background:#fff;padding:12px;border-radius:12px;border:1px solid rgba(160,130,110,0.05);margin-bottom:10px}
     .bubble .name{font-weight:700;color:var(--mocha);margin-bottom:4px}
     .bubble .text{font-size:14px}
-
-    .note{background:linear-gradient(180deg,#fff,#FFF8F4);padding:10px;border-radius:10px;border-left:4px solid rgba(166,124,84,0.12);color:var(--muted);font-size:13px}
-
     .pricing{text-align:center;background:linear-gradient(180deg,#fff,#FDF6F0);padding:14px;border-radius:10px;border:1px solid rgba(160,130,100,0.06);margin-top:12px}
-    .pricing .promo{font-size:20px;font-weight:800;color:#B33F2E}
-    .pricing .normal{text-decoration:line-through;color:var(--muted);font-size:13px;margin-left:6px}
-
     .promo-img{margin-top:12px;position:relative}
     .promo-img img{width:100%;border-radius:10px}
     .promo-badge{position:absolute;left:10px;top:10px;background:var(--mocha);color:#fff;padding:6px 12px;border-radius:999px;font-weight:700;font-size:12px;box-shadow:0 6px 20px rgba(100,60,30,0.12)}
-
-    /* embed form */
     .embed{background:linear-gradient(180deg,#fff,#FFF6F2);padding:14px;border-radius:12px;border:1px solid rgba(160,130,100,0.06);margin-top:14px}
     .embed h3{color:var(--mocha);font-size:16px;margin-bottom:8px;text-align:center}
-
     footer{text-align:center;font-size:13px;color:var(--muted);margin-top:20px;padding-bottom:20px}
-
-    /* animation */
     .fade{opacity:0;transform:translateY(10px);transition:opacity .6s ease,transform .6s ease}
     .fade.show{opacity:1;transform:none}
   </style>
@@ -77,79 +58,82 @@
     <div class="card section fade">
       <h1>Lace Hotpants</h1>
       <p class="lead">Celana dalam wanita model hotpants boxer super jumbo. Lembut, adem, dan nyaman untuk aktivitas harian.</p>
-      <p class="desc">Terbuat dari bahan premium yang elastis dan lembut, memberi kenyamanan maksimal sepanjang hari. Potongan short pants kekinian yang menutup dengan sempurna untuk tampilan percaya diri.</p>
-      <div class="sizes">
-        <div class="size"><b>Size M</b>70–74 cm / 45–55 kg</div>
-        <div class="size"><b>Size L</b>74–78 cm / 55–65 kg</div>
-        <div class="size"><b>Size XL</b>78–82.5 cm / 65–75 kg</div>
-        <div class="size"><b>Size XXL</b>82.5–87.5 cm / 75–85 kg</div>
-        <div class="size" style="grid-column:1/3"><b>Size XXXL</b>87.5–93 cm / 85–95 kg</div>
-      </div>
-    </div>
-
-    <div class="card section fade">
-      <div class="details">
-        <h3>Detail & Keunggulan</h3>
-        <ul>
-          <li>Desain simple & modern</li>
-          <li>Bahan adem dan lembut</li>
-          <li>Tidak menerawang dan menutup sempurna</li>
-          <li>Elastis mengikuti bentuk tubuh</li>
-        </ul>
-      </div>
-
-      <div class="gallery">
-        <div>
-          <img src="https://down-id.img.susercontent.com/file/id-11134207-7ra0m-mdiw8wddiyz32c.webp" alt="detail 1">
-          <div class="caption">Potongan hotpants yang nyaman & elegan.</div>
-        </div>
-        <div>
-          <img src="https://down-id.img.susercontent.com/file/id-11134207-7ra0l-mdiw8w9rpnq061.webp" alt="detail 2">
-          <div class="caption">Bahan lembut & fleksibel untuk aktivitas seharian.</div>
-        </div>
-      </div>
-    </div>
-
-    <div class="card section fade">
-      <h3 style="text-align:center;color:var(--mocha)">Testimoni Pelanggan</h3>
-      <div class="bubble">
-        <div class="name">Alya, Bandung</div>
-        <div class="text">"Nyaman banget dipakai tidur maupun aktivitas. Jahitannya rapi dan nggak bikin gerah. Sudah repurchase!"</div>
-      </div>
-      <div class="bubble">
-        <div class="name">Mira, Jakarta</div>
-        <div class="text">"Ukuran sesuai, bahan adem & lembut. Sangat recommended."</div>
-      </div>
-    </div>
-
-    <div class="card section fade">
-      <div class="promo-img">
-        <img src="https://i.postimg.cc/K8xMnLdG/codgif-ezgif-com-crop.gif" alt="promo">
-        <div class="promo-badge">DISKON SPESIAL</div>
-      </div>
-
-      <div class="pricing">
-        <div>Paket Promo Hari Ini</div>
-        <div style="display:flex;justify-content:space-between;gap:10px;margin-top:10px">
-          <div style="flex:1"><div class="promo">Rp155.000</div><div style="font-size:13px;color:var(--muted)">Isi 3 pcs</div></div>
-          <div style="flex:1"><div class="promo">Rp185.000</div><div style="font-size:13px;color:var(--muted)">Isi 6 pcs</div></div>
-        </div>
-      </div>
+      <p class="desc">Terbuat dari bahan premium yang elastis dan lembut, memberi kenyamanan maksimal sepanjang hari.</p>
     </div>
 
     <div class="card section fade">
       <div class="embed">
         <h3>Form Pemesanan</h3>
-        <form class="orderonline-embed-form"
-              data-username="vita"
-              data-product-slug="lace-hotpants"
-              data-product-id="68f7981c1e10e6aa540abcea"
-              id="oo-embed-form-lace-hotpants"
-              data-origin="orderonline">
-          <div class="ooef-loader">
-            <div aria-live="polite" role="status"><div>Memuat form...</div></div>
-          </div>
-        </form>
+
+        <!-- OrderOnline Embed Code - v8.0.4 -->
+        <div class="ooef">
+          <form class="orderonline-embed-form"
+                data-username="vita"
+                data-product-slug="lace-hotpants"
+                data-product-id="68f7981c1e10e6aa540abcea"
+                id="oo-embed-form-lace-hotpants-6338"
+                data-origin="orderonline">
+            <div class="ooef-loader">
+              <style>
+                .ooef-loader{visibility:hidden;opacity:0;position:absolute;left:0;right:0;top:0;bottom:0;display:flex;justify-content:center;align-items:center;flex-direction:column;animation:ooLoadingIn 10s ease;-webkit-animation:ooLoadingIn 10s ease;animation-fill-mode:forwards;overflow:hidden}
+                @keyframes ooLoadingIn{0%{visibility:hidden;opacity:0}20%{visibility:visible;opacity:0}100%{visibility:visible;opacity:1}}
+                @-webkit-keyframes ooLoadingIn{0%{visibility:hidden;opacity:0}20%{visibility:visible;opacity:0}100%{visibility:visible;opacity:1}}
+                .ooef-loader>div,.ooef-loader>div:after{border-radius:50%;width:2.5rem;height:2.5rem}
+                .ooef-loader>div{font-size:10px;position:relative;text-indent:-9999em;border:.25rem solid #f5f5f5;border-left:.25rem solid #55c4cf;-webkit-transform:translateZ(0);-ms-transform:translateZ(0);transform:translateZ(0);-webkit-animation:ooLoading 1.1s infinite linear;animation:ooLoading 1.1s infinite linear}
+                .ooef-loader.error>div{border-left:.25rem solid #ff4500;animation-duration:5s}
+                @-webkit-keyframes ooLoading{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}
+                @keyframes ooLoading{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}
+              </style>
+              <div aria-live="polite" role="status"><div>Loading...</div></div>
+            </div>
+          </form>
+        </div>
+        <script>
+          if (typeof xLogError != 'function') {
+            var xLogError = function (error) {
+              var req = new XMLHttpRequest();
+              var payload = JSON.stringify({ url: document.location.href, line: error.line, stack: error.stack });
+              var params = 'message=' + encodeURIComponent(error.name) + '&payload=' + encodeURIComponent(payload) + '&type=embed&level=error';
+              req.open('POST', 'https://api.orderonline.id/log', true);
+              req.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
+              req.send(params);
+            };
+          }
+          try {
+            if (typeof xEmbedScript != 'function') {
+              var xEmbedScript = function () {
+                !function(w, d, e, v, id, t, s) {
+                  if (d.getElementById(id)) return;
+                  t = d.createElement(e); t.async = !0; t.src = v; t.id = id;
+                  s = d.getElementsByTagName(e)[0];
+                  s.parentNode.insertBefore(t, s);
+                }(window, document, 'script', 'https://cdn.orderonline.id/js/embed-v2-slim.min.js?v=8.0.4', 'oo-embed-js');
+              };
+            }
+            if (typeof xEmbedInit != 'function') {
+              var xEmbedInit = function (w, n) {
+                if (w.ooe) return;
+                n = w.ooe = function() { n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments) };
+                if (!w._ooe) w._ooe = n;
+                n.push = n; n.loaded = !0; n.version = '8.0.4'; n.queue = [];
+              };
+            }
+            xEmbedInit(window);
+            ooe('setup', 'redirect', 'https://vita.orderonline.id');
+            ooe('init', '5f1a8627a9bf8058b0424f32', '68f7981c1e10e6aa540abcea', '68f7981c1e10e6aa540abceb', 'oo-embed-form-lace-hotpants-6338', {"mode":"page","action":"Klik untuk pemesanan","title":"Form Pemesanan","triggerPixel":false,"triggerGtm":false});
+            if (!window.jQuery) {
+              !function(w, d, e, v, id, t, s) {
+                if (d.getElementById(id)) return;
+                t = d.createElement(e); t.async = !0; t.src = v; t.id = id;
+                t.addEventListener('load', xEmbedScript);
+                s = d.getElementsByTagName(e)[0];
+                s.parentNode.insertBefore(t, s);
+              }(window, document, 'script', 'https://cdn.orderonline.id/js/vendor/jquery.min.js', 'oo-embed-jquery');
+            } else { xEmbedScript(); }
+          } catch (e) { xLogError(e); throw e; }
+        </script>
+        <!-- End OrderOnline Embed Code -->
+
       </div>
     </div>
 
@@ -163,12 +147,7 @@
       },{threshold:0.1});
       document.querySelectorAll('.fade').forEach(el=>io.observe(el));
       document.getElementById('year').textContent=new Date().getFullYear();
-      if(typeof xEmbedInit==='function'){try{xEmbedInit(window)}catch(e){}}
     });
   </script>
-
-  <!-- 🔹 Tambahkan baris ini supaya form OrderOnline tampil -->
-  <script async src="https://orderonline.id/embed/script.js"></script>
-
 </body>
 </html>
